force-app/main/default/objects/Contact/fields/SCMT__DeskCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskCreatedAt__c</fullName>
    <label>Desk Created At</label>
    <type>DateTime</type>
</CustomField>