force-app/main/default/objects/Contact/fields/SCMT__DeskExternalId__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskExternalId__c</fullName>
    <description>This custom field contains the External Id of this record from Desk.com for historical purposes.</description>
    <externalId>true</externalId>
    <label>Desk External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>