force-app/main/default/objects/Contact/fields/SCMT__DeskUpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>SCMT__DeskUpdatedAt__c</fullName>
    <label>Desk Updated At</label>
    <type>DateTime</type>
</CustomField>