force-app/main/default/objects/Contact/fields/SCMT__HomeAddress__c.field-meta.xml
<CustomField>
    <fullName>SCMT__HomeAddress__c</fullName>
    <label>Home Address</label>
    <type>TextArea</type>
</CustomField>