force-app/main/default/objects/Contact/fields/SCMT__Language__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ar</fullName>
            </value>
            <value>
                <fullName>cs</fullName>
            </value>
            <value>
                <fullName>da</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>el</fullName>
            </value>
            <value>
                <fullName>en_GB</fullName>
            </value>
            <value>
                <fullName>en_US</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>es_MX</fullName>
            </value>
            <value>
                <fullName>fi</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>hu</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>iw</fullName>
            </value>
            <value>
                <fullName>ja</fullName>
            </value>
            <value>
                <fullName>ko</fullName>
            </value>
            <value>
                <fullName>nl_NL</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>pl</fullName>
            </value>
            <value>
                <fullName>pt_BR</fullName>
            </value>
            <value>
                <fullName>pt_PT</fullName>
            </value>
            <value>
                <fullName>ro</fullName>
            </value>
            <value>
                <fullName>ru</fullName>
            </value>
            <value>
                <fullName>sl</fullName>
            </value>
            <value>
                <fullName>sv</fullName>
            </value>
            <value>
                <fullName>th</fullName>
            </value>
            <value>
                <fullName>tr</fullName>
            </value>
            <value>
                <fullName>zh_CN</fullName>
            </value>
            <value>
                <fullName>zh_TW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>