force-app/main/default/objects/Contact/fields/SCMT__WorkAddress__c.field-meta.xml
<CustomField>
    <fullName>SCMT__WorkAddress__c</fullName>
    <label>Work Address</label>
    <type>TextArea</type>
</CustomField>