force-app/main/default/objects/Contact/recordTypes/SCMT__SCMT.recordType-meta.xml
<RecordType>
    <fullName>SCMT__SCMT</fullName>
    <active>true</active>
    <label>Desk.com Migrated Customers</label>
</RecordType>